[package]
name = "mysql_enum"
version = "0.1.2"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Convert between Rust enum and MySQL enum"
keywords = ["mysql", "enum"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/mysql_enum"

[workspace]
members =  [
    "derive"
]

[dependencies]
mysql = "^14"
mysql_enum_derive = { path = "derive", version = "0.1.0" }

[dev-dependencies]
strum = "0.14"
strum_macros = "0.14"
