[package]
name = "mysql_enum_derive"
version = "0.1.2"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library for mysql enum"
keywords = ["mysql", "enum"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/mysql_enum"

[lib]
proc-macro = true

[dependencies]
syn ="0.11.11"
quote = "0.3.15"
heck = "0.3.1"



